# telegram-msg-bridge

./: .env.example  .gitignore  LICENSE  README.md  bot_database.db  instance.py  main.py  pyproject.toml
config/: __init__.py  setting.py  social_links.example.json  social_links.py
core/: __init__.py  bot_runner.py  instances.py  setup.py
database/: __init__.py  base.py  engine.py  models.py  scope.py  stores.py
docs/: README.ar.md  README.es.md  README.ru.md  README.zh.md
enums/: __init__.py  bot_status.py  inbox_action.py  locale.py  logging.py  message_effect.py  message_mode.py  reaction.py  status.py  sticker_id.py  throttle.py
filter/: __init__.py  is_sudo.py
handler/: __init__.py
handler/sudo/: __init__.py  button.py  callback.py  command.py  commands.py  helper.py  state.py
handler/user/: __init__.py  button.py  callback.py  command.py  commands.py  helper.py  state.py
keyboard/: __init__.py
keyboard/sudo/: inline_callback.py  inline_keyboard.py  reply_markup.py
keyboard/user/: inline_callback.py  inline_keyboard.py  reply_keyboard.py
lexicon/ar/: messages.ftl
lexicon/de/: messages.ftl
lexicon/en/: message.ftl
lexicon/es/: messages.ftl
lexicon/fa/: messages.ftl
lexicon/fr/: messages.ftl
lexicon/he/: messages.ftl
lexicon/hi/: messages.ftl
lexicon/id/: messages.ftl
lexicon/it/: messages.ftl
lexicon/ko/: messages.ftl
lexicon/ms/: messages.ftl
lexicon/nl/: messages.ftl
middleware/: __init__.py  db.py  gate.py  i18n.py  throttling.py  user.py
state/: __init__.py
tests/: conftest.py  factories.py
util/: __init__.py  bot_commands.py  bot_state.py  broadcaster.py  logger.py  scheduler.py
(+21 files in other folders)
