[project]
name = "telegram-msg-bridge"
version = "0.1.0"
description = "A highly modular and Pythonic Telegram Messenger Bridge. Built with aiogram 3.x and asyncio."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "aiogram-i18n (>=1.4,<2.0)",
    "fluent-compiler (>=1.1,<2.0)",
    "fluent-runtime (>=0.4.0,<0.5.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
